# fuelroute/admin.py
@@ -5,6 +5,6 @@ from fuelroute.models import FuelStation
 
 @admin.register(FuelStation)
 class FuelStationAdmin(admin.ModelAdmin):
-    list_display = ('name', 'city', 'state', 'price_per_gallon', 'highway')
-    list_filter = ('state', 'highway')
+    list_display = ('name', 'city', 'state', 'price_per_gallon', 'highway', 'geocode_precision')
+    list_filter = ('state', 'highway', 'geocode_precision')
     search_fields = ('name', 'city', 'address')
